@startuml
scale 1

class ActionWrapper {
    +get_action()
    +get_action_space_dim()
    +get_actions()
    +get_excluded_actions()
    +is_action_done()
    +reset()
}

class StateBuilder {
    +build_state()
    +get_state_dim()
}

class LearningModel {
    +state_builder: object
    +reward_builder: object

    +choose_action()
    +learn()
    +load()
    +predict()
    +save()
}

class DeepQLearning {
}

class QLearning {
}

class PolicyGradient {
}

ActionWrapper *-- LearningModel

StateBuilder *-- LearningModel

LearningModel <|-- QLearning
LearningModel <|-- DeepQLearning
LearningModel <|-- PolicyGradient


@enduml